5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4191/executions/1716_2508.log
== TEST (2019-05-14 16:57:00) 
-- CODE:
n=int(input("Quantidades de termos: "))
sinal=1
numerador=2
cont=1
while(cont<n):
	r=sinal*4/numerado*(numerador+1)*(numerador+2)+3
	sinal=sinal*(-1)
	numerador=numerador+2
	cont=cont+1
print(r)	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    r=sinal*4/numerado*(numerador+1)*(numerador+2)+3
NameError: name 'numerado' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 16:57:11) 
-- CODE:
n=int(input("Quantidades de termos: "))
sinal=1
numerador=2
cont=1
while(cont<n):
	r=sinal*4/numerador*(numerador+1)*(numerador+2)+3
	sinal=sinal*(-1)
	numerador=numerador+2
	cont=cont+1
print(r)	
-- OUTPUT:
-42.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 16:57:44) 
-- CODE:
n=int(input("Quantidades de termos: "))
sinal=1
numerador=2
cont=1
while(cont<n):
	r=sinal*4/(numerador*(numerador+1)*(numerador+2))+3
	sinal=sinal*(-1)
	numerador=numerador+2
	cont=cont+1
print(r)	
-- OUTPUT:
2.9944444444444445
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 16:58:31) 
-- CODE:
n=int(input("Quantidades de termos: "))
sinal=1
numerador=2
cont=1
while(cont<n):
	r=sinal*4/(numerador*(numerador+1)*(numerador+2))+3
	sinal=sinal*(-1)
	numerador=numerador+2
	cont=cont+1
print(round(r))	
-- OUTPUT:
3
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 16:58:40) 
-- CODE:
n=int(input("Quantidades de termos: "))
sinal=1
numerador=2
cont=1
while(cont<n):
	r=sinal*4/(numerador*(numerador+1)*(numerador+2))+3
	sinal=sinal*(-1)
	numerador=numerador+2
	cont=cont+1
print(round(r, 8))	
-- OUTPUT:
2.99444444
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-14 16:58:50) 
-- CODE:
n=int(input("Quantidades de termos: "))
sinal=1
numerador=2
cont=1
while(cont<n):
	r=sinal*4/(numerador*(numerador+1)*(numerador+2))+3
	sinal=sinal*(-1)
	numerador=numerador+2
	cont=cont+1
print(round(r, 8))	
-- EXECUTION TIME:
0.215578
-- TEST CASE 1:
---- input:
5
---- correct output:
3.13968254
---- user output:
2.99444444
-- TEST CASE 2:
---- input:
22
---- correct output:
3.14161607
---- user output:
3.00005034
-- TEST CASE 3:
---- input:
19
---- correct output:
3.14155633
---- user output:
2.99992097
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 16:58:54) 
-- CODE:
n=int(input("Quantidades de termos: "))
sinal=1
numerador=2
cont=1
while(cont<n):
	r=sinal*4/(numerador*(numerador+1)*(numerador+2))+3
	sinal=sinal*(-1)
	numerador=numerador+2
	cont=cont+1
print(round(r, 8))	
-- OUTPUT:
2.99444444
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 16:59:00) 
-- CODE:
n=int(input("Quantidades de termos: "))
sinal=1
numerador=2
cont=1
while(cont<n):
	r=sinal*4/(numerador*(numerador+1)*(numerador+2))+3
	sinal=sinal*(-1)
	numerador=numerador+2
	cont=cont+1
print(round(r, 8))	
-- OUTPUT:
2.99444444
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-14 16:59:12) 
-- CODE:
n=int(input("Quantidades de termos: "))
sinal=1
numerador=2
cont=1
while(cont<n):
	r=sinal*4/(numerador*(numerador+1)*(numerador+2))+3
	sinal=sinal*(-1)
	numerador=numerador+2
	cont=cont+1
print(round(r, 8))	
-- EXECUTION TIME:
0.187765
-- TEST CASE 1:
---- input:
5
---- correct output:
3.13968254
---- user output:
2.99444444
-- TEST CASE 2:
---- input:
22
---- correct output:
3.14161607
---- user output:
3.00005034
-- TEST CASE 3:
---- input:
19
---- correct output:
3.14155633
---- user output:
2.99992097
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 16:59:27) 
-- CODE:
n=int(input("Quantidades de termos: "))
sinal=1
numerador=2
cont=1
while(n>=cont):
	r=sinal*4/(numerador*(numerador+1)*(numerador+2))+3
	sinal=sinal*(-1)
	numerador=numerador+2
	cont=cont+1
print(round(r, 8))	
-- OUTPUT:
3.0030303
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 16:59:41) 
-- CODE:
n=int(input("Quantidades de termos: "))
sinal=1
numerador=2
cont=1
while(n<cont):
	r=sinal*4/(numerador*(numerador+1)*(numerador+2))+3
	sinal=sinal*(-1)
	numerador=numerador+2
	cont=cont+1
print(round(r, 8))	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 10, in <module>
    print(round(r, 8))	
NameError: name 'r' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 17:00:55) 
-- CODE:
n=int(input("Quantidades de termos: "))
sinal=1
numerador=2
cont=1
while(n<cont):
	r=sinal*4/(numerador*(numerador+1)*(numerador+2))
	sinal=sinal*(-1)
	numerador=numerador+2
	cont=cont+1
r=r+3
print(round(r, 8))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 10, in <module>
    r=r+3
NameError: name 'r' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 17:01:20) 
-- CODE:
n=int(input("Quantidades de termos: "))
sinal=1
numerador=2
cont=1
while(n<cont):
	r=sinal*4/(numerador*(numerador+1)*(numerador+2))
	sinal=sinal*(-1)
	numerador=numerador+2
	cont=cont+1

	print(round(r+3, 8))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 10, in <module>
    r=r+3
NameError: name 'r' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 17:01:28) 
-- CODE:
n=int(input("Quantidades de termos: "))
sinal=1
numerador=2
cont=1
while(n<cont):
	r=sinal*4/(numerador*(numerador+1)*(numerador+2))
	sinal=sinal*(-1)
	numerador=numerador+2
	cont=cont+1

print(round(r+3, 8))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 11, in <module>
    print(round(r+3, 8))
NameError: name 'r' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 17:01:32) 
-- CODE:
n=int(input("Quantidades de termos: "))
sinal=1
numerador=2
cont=1
while(n<cont):
	r=sinal*4/(numerador*(numerador+1)*(numerador+2))
	sinal=sinal*(-1)
	numerador=numerador+2
	cont=cont+1

print(round(r+3, 8))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 11, in <module>
    print(round(r+3, 8))
NameError: name 'r' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 17:01:55) 
-- CODE:
n=int(input("Quantidades de termos: "))
sinal=1
numerador=2
cont=1
while(n<cont):
	resultado=sinal*4/(numerador*(numerador+1)*(numerador+2))
	sinal=sinal*(-1)
	numerador=numerador+2
	cont=cont+1

print(round(resultado+3, 8))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 11, in <module>
    print(round(resultado+3, 8))
NameError: name 'resultado' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 17:02:33) 
-- CODE:
n=int(input("Quantidades de termos: "))
sinal=1
numerador=2
cont=1
resultado=0
while(n<cont):
	resultado=sinal*4/(numerador*(numerador+1)*(numerador+2))
	sinal=sinal*(-1)
	numerador=numerador+2
	cont=cont+1
resultado=resutado+3
print(round(resultado, 8))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 11, in <module>
    resultado=resutado+3
NameError: name 'resutado' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 17:02:45) 
-- CODE:
n=int(input("Quantidades de termos: "))
sinal=1
numerador=2
cont=1
resultado=0
while(n<cont):
	resultado=sinal*4/(numerador*(numerador+1)*(numerador+2))
	sinal=sinal*(-1)
	numerador=numerador+2
	cont=cont+1

resultado=resutado+3
print(round(resultado, 8))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 12, in <module>
    resultado=resutado+3
NameError: name 'resutado' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 17:03:12) 
-- CODE:
n=int(input("Quantidades de termos: "))
sinal=1
numerador=2
cont=1
r=0
while(n<cont):
	r=sinal*4/(numerador*(numerador+1)*(numerador+2))
	sinal=sinal*(-1)
	numerador=numerador+2
	cont=cont+1

r=resutado+3
print(round(resultado, 8))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 12, in <module>
    r=resutado+3
NameError: name 'resutado' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 17:03:17) 
-- CODE:
n=int(input("Quantidades de termos: "))
sinal=1
numerador=2
cont=1
r=0
while(n<cont):
	r=sinal*4/(numerador*(numerador+1)*(numerador+2))
	sinal=sinal*(-1)
	numerador=numerador+2
	cont=cont+1

r=r+3
print(round(resultado, 8))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 13, in <module>
    print(round(resultado, 8))
NameError: name 'resultado' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 17:03:32) 
-- CODE:
n=int(input("Quantidades de termos: "))
sinal=1
numerador=2
cont=1
r=0
while(n<cont):
	r=sinal*4/(numerador*(numerador+1)*(numerador+2))
	sinal=sinal*(-1)
	numerador=numerador+2
	cont=cont+1

r=3+r
print(round(r, 8))
-- OUTPUT:
3
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 17:04:00) 
-- CODE:
n=int(input("Quantidades de termos: "))
sinal=1
numerador=2
cont=1

while(n<cont):
	r=sinal*4/(numerador*(numerador+1)*(numerador+2))
	sinal=sinal*(-1)
	numerador=numerador+2
	cont=cont+1

r=3+r
print(round(r, 8))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 12, in <module>
    r=3+r
NameError: name 'r' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 17:04:25) 
-- CODE:
n=int(input("Quantidades de termos: "))
sinal=1
numerador=2
cont=1
r=0
while(n<cont):
	r=sinal*4/(numerador*(numerador+1)*(numerador+2))
	sinal=sinal*(-1)
	numerador=numerador+2
	cont=cont+1

r=3+r
print(round(r, 8))
-- OUTPUT:
3
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 17:06:14) 
-- CODE:
n=int(input("Quantidades de termos: "))
sinal=1
numerador=2
cont=1
r=0
while(n<cont):
	r=sinal*4/(numerador*(numerador+1)*(numerador+2))
	sinal=sinal*(-1)
	numerador=numerador+2
	cont=cont+1

r=3+r
print(round(r, 8))
-- OUTPUT:
3
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 17:06:21) 
-- CODE:
n=int(input("Quantidades de termos: "))
sinal=1
numerador=2
cont=1
r=0
while(n<cont):
	r=sinal*4/(numerador*(numerador+1)*(numerador+2))
	sinal=sinal*(-1)
	numerador=numerador+2
	cont=cont+1

r=3+r
print(round(r, 8))
-- OUTPUT:
3
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 17:06:26) 
-- CODE:
n=int(input("Quantidades de termos: "))
sinal=1
numerador=2
cont=1
r=0
while(n<cont):
	r=sinal*4/(numerador*(numerador+1)*(numerador+2))
	sinal=sinal*(-1)
	numerador=numerador+2
	cont=cont+1

r=3+r
print(round(r, 8))
-- OUTPUT:
3
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 17:06:39) 
-- CODE:
n=int(input("Quantidades de termos: "))
sinal=1
numerador=2
cont=1
r=0
while(n<cont):
	r=sinal*4/(numerador*(numerador+1)*(numerador+2))
	sinal=sinal*(-1)
	numerador=numerador+2
	cont=cont+1

r=r+3
print(round(r, 8))
-- OUTPUT:
3
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 17:07:03) 
-- CODE:
n=int(input("Quantidades de termos: "))
sinal=1
numerador=2
cont=1

while(n<cont):
	r=sinal*4/(numerador*(numerador+1)*(numerador+2))
	sinal=sinal*(-1)
	numerador=numerador+2
	cont=cont+1

r=r+3
print(round(r, 8))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 12, in <module>
    r=r+3
NameError: name 'r' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 17:07:11) 
-- CODE:
n=int(input("Quantidades de termos: "))
sinal=1
numerador=2
cont=1

while(n<cont):
	r=sinal*4/(numerador*(numerador+1)*(numerador+2))
	sinal=sinal*(-1)
	numerador=numerador+2
	cont=cont+1


print(round(r, 8))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 13, in <module>
    print(round(r, 8))
NameError: name 'r' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 17:07:39) 
-- CODE:
n=int(input("Quantidades de termos: "))
sinal=1
numerador=2
cont=1

while(n<cont):
	resul=sinal*4/(numerador*(numerador+1)*(numerador+2))
	sinal=sinal*(-1)
	numerador=numerador+2
	cont=cont+1


print(round(resul, 8))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 13, in <module>
    print(round(resul, 8))
NameError: name 'resul' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 17:07:59) 
-- CODE:
n=int(input("Quantidades de termos: "))
sinal=1
numerador=2
cont=1

while(n<cont):
	resul=sinal*4/(numerador*(numerador+1)*(numerador+2))
	sinal=sinal*(-1)
	numerador=numerador+2
	cont=cont+1


print(resul)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 13, in <module>
    print(resul)
NameError: name 'resul' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 17:08:36) 
-- CODE:
n=int(input("Quantidades de termos: "))
sinal=1
numerador=2
cont=1

while(n<cont):
	resul=sinal*4/(numerador*(numerador+1)*(numerador+2))
	sinal=sinal*(-1)
	numerador=numerador+2
	cont=cont+1

resul+3=resul
print(resul)
-- ERROR:
File "XXXX", line 12
    resul+3=resul
    ^
SyntaxError: can't assign to operator
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 17:08:51) 
-- CODE:
n=int(input("Quantidades de termos: "))
sinal=1
numerador=2
cont=1

while(n<cont):
	resul=sinal*4/(numerador*(numerador+1)*(numerador+2))
	sinal=sinal*(-1)
	numerador=numerador+2
	cont=cont+1

resul=3+resul
print(resul)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 12, in <module>
    resul=3+resul
NameError: name 'resul' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 17:14:03) 
-- CODE:
n=int(input("Quantidades de termos: "))
sinal=1
numerador=2
cont=1

while(n<cont):
	resultado=sinal*4/(numerador*(numerador+1)*(numerador+2))
	sinal=sinal*(-1)
	numerador=numerador+2
	cont=cont+1

resultado=3+resultado
print(resultado)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 12, in <module>
    resultado=3+resultado
NameError: name 'resultado' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 17:14:17) 
-- CODE:
n=int(input("Quantidades de termos: "))
sinal=1
numerador=2
cont=1

while(n<cont):
	resultado=sinal*4/(numerador*(numerador+1)*(numerador+2))
	sinal=sinal*(-1)
	numerador=numerador+2
	cont=cont+1

resultado = 3 + resultado
print(resultado)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 12, in <module>
    resultado = 3 + resultado
NameError: name 'resultado' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 17:14:26) 
-- CODE:
n=int(input("Quantidades de termos: "))
sinal=1
numerador=2
cont=1

while(n<cont):
	resultado=sinal*4/(numerador*(numerador+1)*(numerador+2))
	sinal=sinal*(-1)
	numerador=numerador+2
	cont=cont+1


print(resultado)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 13, in <module>
    print(resultado)
NameError: name 'resultado' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 14:38:29) 
-- CODE:
n=int(input("Quantidades de termos: "))
sinal=1
numerador=2
cont=0
result=n
while(n<cont):
	result=result+(sinal*(4/numerador*nu(merador+1)*(numerador+2)))
	sinal=sinal*(-1)
	numerador=numerador+2
result=result+3
print(result)
-- OUTPUT:
8
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 14:38:44) 
-- CODE:
n=int(input("Quantidades de termos: "))
sinal=1
numerador=2
cont=0
result=n
while(n<cont):
	result=result+(sinal*(4/numerador*nu(merador+1)*(numerador+2)))
	sinal=sinal*(-1)
	numerador=numerador+2

print(result)
-- OUTPUT:
5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 14:39:26) 
-- CODE:
n=int(input("Quantidades de termos: "))
sinal=1
numerador=2
cont=0
result=n
while(n<cont):
	result=result+(sinal*(4/numerador*(numerador+1)*(numerador+2)))
	sinal=sinal*(-1)
	numerador=numerador+2

print(result)
-- OUTPUT:
5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 14:39:37) 
-- CODE:
n=int(input("Quantidades de termos: "))
sinal=1
numerador=2
cont=0
result=n
while(n<cont):
	result=result+(sinal*(4/numerador*(numerador+1)*(numerador+2)))
	sinal=sinal*(-1)
	numerador=numerador+2

print(result)
-- OUTPUT:
5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 14:39:52) 
-- CODE:
n=int(input("Quantidades de termos: "))
sinal=1
numerador=2
cont=0

while(n<cont):
	result=result+(sinal*(4/numerador*(numerador+1)*(numerador+2)))
	sinal=sinal*(-1)
	numerador=numerador+2

print(result)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 11, in <module>
    print(result)
NameError: name 'result' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 14:40:21) 
-- CODE:
n=int(input("Quantidades de termos: "))
sinal=1
numerador=2
cont=0
result=3
while(n<cont):
	result=result+(sinal*(4/numerador*(numerador+1)*(numerador+2)))
	sinal=sinal*(-1)
	numerador=numerador+2

print(result)
-- OUTPUT:
3
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 14:40:29) 
-- CODE:
n=int(input("Quantidades de termos: "))
sinal=1
numerador=2
cont=0
result=3
while(n<cont):
	result=result+(sinal*(4/numerador*(numerador+1)*(numerador+2)))
	sinal=sinal*(-1)
	numerador=numerador+2

print(result)
-- OUTPUT:
3
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 14:40:41) 
-- CODE:
n=int(input("Quantidades de termos: "))
sinal=1
numerador=2
cont=0
result=n
while(n<cont):
	result=result+(sinal*(4/numerador*(numerador+1)*(numerador+2)))
	sinal=sinal*(-1)
	numerador=numerador+2

print(result)
-- OUTPUT:
5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 14:40:46) 
-- CODE:
n=int(input("Quantidades de termos: "))
sinal=1
numerador=2
cont=0
result=n
while(n<cont):
	result=result+(sinal*(4/numerador*(numerador+1)*(numerador+2)))
	sinal=sinal*(-1)
	numerador=numerador+2

print(result)
-- OUTPUT:
5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 14:41:41) 
-- CODE:
n=int(input("Quantidades de termos: "))
sinal=1
numerador=2
cont=0
result=n
denominador=4
while(n<cont):
	result=result+(sinal*(denominador/(numerador*(numerador+1)*(numerador+2))))
	sinal=sinal*(-1)
	numerador=numerador+2

print(result)
-- OUTPUT:
5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 14:41:48) 
-- CODE:
n=int(input("Quantidades de termos: "))
sinal=1
numerador=2
cont=0
result=n
denominador=4
while(n<cont):
	result=result+(sinal*(denominador/(numerador*(numerador+1)*(numerador+2))))
	sinal=sinal*(-1)
	numerador=numerador+2

print(result)
-- OUTPUT:
5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 14:41:52) 
-- CODE:
n=int(input("Quantidades de termos: "))
sinal=1
numerador=2
cont=0
result=n
denominador=4
while(n<cont):
	result=result+(sinal*(denominador/(numerador*(numerador+1)*(numerador+2))))
	sinal=sinal*(-1)
	numerador=numerador+2

print(result)
-- OUTPUT:
5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 14:42:33) 
-- CODE:
n=int(input("Quantidades de termos: "))
sinal=1
numerador=2
cont=0
result=n
denominador=4
while(n<cont):
	result=result+(sinal*(denominador/(numerador*(numerador+1)*(numerador+2))))
	sinal=sinal*(-1)
	numerador=numerador+2
print(round(result, 8))	

-- OUTPUT:
5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 14:43:22) 
-- CODE:
n=int(input("Quantidades de termos: "))
sinal=1
numerador=2
cont=0
result=n
denominador=4

while(n<cont):
	result=result+(sinal*(denominador/(numerador*(numerador+1)*(numerador+2))))
	sinal=sinal*(-1)
	numerador=numerador+2
result=result+3	
print(round(result, 8))	

-- OUTPUT:
8
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 14:43:27) 
-- CODE:
n=int(input("Quantidades de termos: "))
sinal=1
numerador=2
cont=0
result=n
denominador=4

while(n<cont):
	result=result+(sinal*(denominador/(numerador*(numerador+1)*(numerador+2))))
	sinal=sinal*(-1)
	numerador=numerador+2
result=result+3	
print(round(result, 8))	

-- OUTPUT:
8
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 14:43:50) 
-- CODE:
n=int(input("Quantidades de termos: "))
sinal=1
numerador=2
cont=0
result=n
denominador=4

while(cont<n):
	result=result+(sinal*(denominador/(numerador*(numerador+1)*(numerador+2))))
	sinal=sinal*(-1)
	numerador=numerador+2
result=result+3	
print(round(result, 8))	

-- OUTPUT:
8
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 14:44:01) 
-- CODE:
n=int(input("Quantidades de termos: "))
sinal=1
numerador=2
cont=0
result=n
denominador=4

while(cont<n):
	result=result+(sinal*(denominador/(numerador*(numerador+1)*(numerador+2))))
	sinal=sinal*(-1)
	numerador=numerador+2

print(round(result, 8))	

-- OUTPUT:
8
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 14:44:12) 
-- CODE:
n=int(input("Quantidades de termos: "))
sinal=1
numerador=2
cont=0
result=n
denominador=4

while(cont<n):
	result=result+(sinal*(denominador/(numerador*(numerador+1)*(numerador+2))))
	sinal=sinal*(-1)
	numerador=numerador+2
	cont=cont+1
print(round(result, 8))	

-- OUTPUT:
5.14271284
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 14:44:45) 
-- CODE:
n=int(input("Quantidades de termos: "))
sinal=1
numerador=2
cont=0
result=n
denominador=4

while(cont<n):
	result=result+(sinal*(denominador/(numerador*(numerador+1)*(numerador+2))))
	sinal=sinal*(-1)
	numerador=numerador+2
	cont=cont+1
	
result=result+3	
print(round(result, 8))	

-- OUTPUT:
8.14271284
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 14:46:10) 
-- CODE:
n=int(input("Quantidades de termos: "))
sinal=1
numerador=2
cont=0
result=n
denominador=4

while(cont<n):
	result=result+sinal*(denominador/(numerador*(numerador+1)*(numerador+2)))
	sinal=sinal*(-1)
	numerador=numerador+2
	cont=cont+1
	
result=result+3	
print(round(result, 8))	

-- OUTPUT:
8.14271284
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 14:46:26) 
-- CODE:
n=int(input("Quantidades de termos: "))
sinal=1
numerador=2
cont=0
result=3
denominador=4

while(cont<n):
	result=result+sinal*(denominador/(numerador*(numerador+1)*(numerador+2)))
	sinal=sinal*(-1)
	numerador=numerador+2
	cont=cont+1
	
result=result+3	
print(round(result, 8))	

-- OUTPUT:
6.14271284
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 14:46:38) 
-- CODE:
n=int(input("Quantidades de termos: "))
sinal=1
numerador=2
cont=0
result=3
denominador=4

while(cont<n):
	result=result+sinal*(denominador/(numerador*(numerador+1)*(numerador+2)))
	sinal=sinal*(-1)
	numerador=numerador+2
	cont=cont+1
	

print(round(result, 8))	

-- OUTPUT:
3.14271284
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 14:46:39) 
-- CODE:
n=int(input("Quantidades de termos: "))
sinal=1
numerador=2
cont=0
result=3
denominador=4

while(cont<n):
	result=result+sinal*(denominador/(numerador*(numerador+1)*(numerador+2)))
	sinal=sinal*(-1)
	numerador=numerador+2
	cont=cont+1
	

print(round(result, 8))	

-- OUTPUT:
3.14271284
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 14:46:48) 
-- CODE:
n=int(input("Quantidades de termos: "))
sinal=1
numerador=2
cont=0
result=3
denominador=4

while(cont<n):
	result=result+sinal*(denominador/(numerador*(numerador+1)*(numerador+2)))
	sinal=sinal*(-1)
	numerador=numerador+2
	cont=cont+1
	

print(round(result, 8))	

-- OUTPUT:
3.14271284
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 14:47:31) 
-- CODE:
n=int(input("Quantidades de termos: "))
sinal=1
numerador=2
cont=0
result=3
denominador=4

while(cont<n):
	result=result+sinal*(denominador/(numerador*(numerador+1)*(numerador+2)))
	sinal=sinal*(-1)
	numerador=numerador+2
	cont=cont+1
	

print(round(result, 8))	

-- OUTPUT:
3.14271284
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 14:47:39) 
-- CODE:
n=int(input("Quantidades de termos: "))
sinal=1
numerador=2
cont=0
result=3
denominador=4

while(cont<n):
	result=result+sinal*(denominador/(numerador*(numerador+1)*(numerador+2)))
	sinal=sinal*(-1)
	numerador=numerador+2
	cont=cont+1
	

print(round(result, 8))	

-- OUTPUT:
3.14271284
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 14:47:45) 
-- CODE:
n=int(input("Quantidades de termos: "))
sinal=1
numerador=2
cont=0
result=3
denominador=4

while(cont<n):
	result=result+sinal*(denominador/(numerador*(numerador+1)*(numerador+2)))
	sinal=sinal*(-1)
	numerador=numerador+2
	cont=cont+1
	

print(round(result, 8))	

-- OUTPUT:
3.14271284
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 14:53:32) 
-- CODE:
n=int(input("Quantidades de termos: "))
sinal=1
numerador=2
cont=0
result=3
denominador=4

while(cont<n):
	result=result+sinal*(denominador/(numerador*(numerador+1)*(numerador+2)))
	sinal=sinal*(-1)
	numerador=numerador+2
	cont=cont+1
print(result)	
	



-- OUTPUT:
3.1427128427128426
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 14:53:55) 
-- CODE:
n=int(input("Quantidades de termos: "))
sinal=1
numerador=2
cont=0
result=3
denominador=4

while(cont<n):
	result=result+sinal*(denominador/(numerador*(numerador+1)*(numerador+2)))
	sinal=sinal*(-1)
	numerador=numerador+2
	cont=cont+1
print(round(result, 8)	
	



-- ERROR:
File "XXXX", line 17
    
    ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 14:54:07) 
-- CODE:
n=int(input("Quantidades de termos: "))
sinal=1
numerador=2
cont=0
result=3
denominador=4

while(cont<n):
	result=result+sinal*(denominador/(numerador*(numerador+1)*(numerador+2)))
	sinal=sinal*(-1)
	numerador=numerador+2
	cont=cont+1
print(round(result, 8)	
	



-- ERROR:
File "XXXX", line 17
    
    ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 14:54:23) 
-- CODE:
n=int(input("Quantidades de termos: "))
sinal=1
numerador=2
cont=0
result=3
denominador=4

while(cont<n):
	result=result+sinal*(denominador/(numerador*(numerador+1)*(numerador+2)))
	sinal=sinal*(-1)
	numerador=numerador+2
	cont=cont+1
print(round(result, 8)
-- ERROR:
File "XXXX", line 14
    
                          ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 14:54:32) 
-- CODE:
n=int(input("Quantidades de termos: "))
sinal=1
numerador=2
cont=0
result=3
denominador=4

while(cont<n):
	result=result+sinal*(denominador/(numerador*(numerador+1)*(numerador+2)))
	sinal=sinal*(-1)
	numerador=numerador+2
	cont=cont+1

	
	
	
print(round(result, 8)
-- ERROR:
File "XXXX", line 18
    
                          ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 14:54:49) 
-- CODE:
n=int(input("Quantidades de termos: "))
sinal=1
numerador=2
cont=0
result=3
denominador=4

while(cont<n):
	result=result+sinal*(denominador/(numerador*(numerador+1)*(numerador+2)))
	sinal=sinal*(-1)
	numerador=numerador+2
	cont=cont+1

	
	
	
print(round(result, 8))
-- OUTPUT:
3.14271284
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 14:55:10) 
-- CODE:
n=int(input("Quantidades de termos: "))
sinal=1
numerador=2
cont=0
result=3
denominador=4

while(cont<n):
	result=result+sinal*(denominador/(numerador*(numerador+1)*(numerador+2)))
	sinal=sinal*(-1)
	numerador=numerador+2
	cont=cont+1

	
	
	
print(result)
-- OUTPUT:
3.1427128427128426
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 14:55:42) 
-- CODE:
n=int(input("Quantidades de termos: "))
sinal=1
numerador=2
cont=0
result=3
denominador=4

while(cont<n):
	result=result+(sinal*(denominador/(numerador*(numerador+1)*(numerador+2))))
	sinal=sinal*(-1)
	numerador=numerador+2
	cont=cont+1

	
	
	
print(result)
-- OUTPUT:
3.1427128427128426
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 14:57:06) 
-- CODE:
n=int(input("Quantidades de termos: "))
sinal=1
numerador=2
cont=0
result=3
denominador=4

while(cont<n):
	result=result+(sinal*denominador/(numerador*(numerador+1)*(numerador+2
	sinal=sinal*(-1)
	numerador=numerador+2
	cont=cont+1

	
	
	
print(result)
-- ERROR:
File "XXXX", line 10
    sinal=sinal*(-1)
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 14:57:18) 
-- CODE:
n=int(input("Quantidades de termos: "))
sinal=1
numerador=2
cont=0
result=3
denominador=4

while(cont<n):
	result=result+(sinal*denominador/(numerador*(numerador+1)*(numerador+2)))
	sinal=sinal*(-1)
	numerador=numerador+2
	cont=cont+1

	
	
	
print(result)
-- OUTPUT:
3.1427128427128426
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 14:57:26) 
-- CODE:
n=int(input("Quantidades de termos: "))
sinal=1
numerador=2
cont=0
result=3
denominador=4

while(cont<n):
	result=result+(sinal*denominador/(numerador*(numerador+1)*(numerador+2)))
	sinal=sinal*(-1)
	numerador=numerador+2
	cont=cont+1

	
	
	
print(result)
-- OUTPUT:
3.1427128427128426
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 14:57:39) 
-- CODE:
n=int(input("Quantidades de termos: "))
sinal=1
numerador=2
cont=0
result=3
denominador=4

while(cont<n):
	result=result+(sinal*(denominador/(numerador*(numerador+1)*(numerador+2))))
	sinal=sinal*(-1)
	numerador=numerador+2
	cont=cont+1

	
	
	
print(result)
-- OUTPUT:
3.1427128427128426
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 14:58:04) 
-- CODE:
n=int(input("Quantidades de termos: "))
sinal=1
numerador=2
cont=0
result=3
denominador=4

while(cont<n):
	result=result+(sinal*(denominador/(numerador*(numerador+1)*(numerador+2))))
	sinal=sinal*(-1)
	numerador=numerador+2
	cont=cont+1

	
	
	
print(round(result, 8))
-- OUTPUT:
3.14271284
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-15 14:58:14) 
-- CODE:
n=int(input("Quantidades de termos: "))
sinal=1
numerador=2
cont=0
result=3
denominador=4

while(cont<n):
	result=result+(sinal*(denominador/(numerador*(numerador+1)*(numerador+2))))
	sinal=sinal*(-1)
	numerador=numerador+2
	cont=cont+1

	
	
	
print(round(result, 8))
-- EXECUTION TIME:
0.148649
-- TEST CASE 1:
---- input:
5
---- correct output:
3.13968254
---- user output:
3.14271284
-- TEST CASE 2:
---- input:
22
---- correct output:
3.14161607
---- user output:
3.14157215
-- TEST CASE 3:
---- input:
19
---- correct output:
3.14155633
---- user output:
3.14162381
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 15:18:01) 
-- CODE:
n=int(input("Quantidades de termos: "))
sinal=1
numerador=2
cont=0
result=3
denominador=4

while(cont<n):
	result=result+(sinal*(4/(numerador*(numerador+1)*(numerador+2))))
	sinal=sinal*(-1)
	numerador=numerador+2
	cont=cont+1

	
	
	
print(round(result, 8))
-- OUTPUT:
3.14271284
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 10:29:56) 
-- CODE:
n=int(input("Quantidades de termos: "))
sinal=1
numerador=2
cont=0
result=3
denominador=4

while(cont<n):
	result=result+(sinal*(4/(numerador*(numerador+1)*(numerador+2))))
	sinal=sinal*(-1)
	numerador=numerador+2
	cont=cont+1

	
	
	
print(round(result, 8))
-- OUTPUT:
3.14271284
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 10:30:10) 
-- CODE:
n=int(input("Quantidades de termos: "))
sinal=1
numerador=2
cont=1
result=3
denominador=4

while(cont<n):
	result=result+(sinal*(4/(numerador*(numerador+1)*(numerador+2))))
	sinal=sinal*(-1)
	numerador=numerador+2
	cont=cont+1

	
	
	
print(round(result, 8))
-- OUTPUT:
3.13968254
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-16 10:30:17) 
-- CODE:
n=int(input("Quantidades de termos: "))
sinal=1
numerador=2
cont=1
result=3
denominador=4

while(cont<n):
	result=result+(sinal*(4/(numerador*(numerador+1)*(numerador+2))))
	sinal=sinal*(-1)
	numerador=numerador+2
	cont=cont+1

	
	
	
print(round(result, 8))
-- EXECUTION TIME:
0.171807
-- TEST CASE 1:
---- input:
5
---- correct output:
3.13968254
---- user output:
3.13968254
-- TEST CASE 2:
---- input:
22
---- correct output:
3.14161607
---- user output:
3.14161607
-- TEST CASE 3:
---- input:
19
---- correct output:
3.14155633
---- user output:
3.14155633
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
